fix(projects-card.module.scss): overflow of the type of project in the search bar

--- a/apps/web-next/src/pages/downloads/ui/projects-card/projects-card.module.scss
+++ b/apps/web-next/src/pages/downloads/ui/projects-card/projects-card.module.scss
@@ -19,6 +19,7 @@
 
 .group {
   display: flex;
+  overflow: auto;
 
   @media (max-width: g.$breakpoint-tablet) {
     display: none !important;
